@@ -1,3 +1,8 @@
+2012-01-04  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/49693
+	* gfortran.dg/common_17.f90:  New test.
+
 2012-01-04  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/49651
